overlapping prob solved

--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ left:0;
 right:0;
 top:0;
 bottom:0;
+overflow-x: hidden;
 
 }
 nav{
@@ -11,12 +12,16 @@ nav{
     height: 100%;
     background: rgba(34,40,49,1);
    position:fixed;
-  width:200px;
+  width:13%;
   
   }
-  #links{
+
+  #links{                                                                   
     margin-top:70px;
     color:#ffd369;
+    display:flex;
+    flex-direction:column;
+    align-items: stretch;
   }
   
   #icone{
@@ -43,12 +48,12 @@ nav{
 #home{
     position:absolute;
     top:0;
-    left:200px;
+   
     right:0px;
-  
+    width:87%;
     background: rgb(57,62,70);
     background: linear-gradient(90deg, rgba(57,62,70,1) 37%, rgba(34,40,49,1) 83%);
-    height:100%;
+   height:100%;
  
 }
 #btncontact{
@@ -174,7 +179,7 @@ nav{
 
     #formation{
         position:absolute;
-        left:200px;
+       width:87%;
         top:700px;
         right:0px;
         height:100%;
@@ -191,7 +196,7 @@ nav{
  
     position:absolute;
     top:1400px;
-    left:200px;
+    width:87%;
     right:0px;
     height:100%;
     background: url(assets/black4.jpg) ;
@@ -236,7 +241,7 @@ nav{
 
     position:absolute;
     top:2105px;
-    left:200px;
+    width:87%;
     right:0px;
     height:100%;
    
@@ -261,7 +266,7 @@ font-size:20px;
 
     position:absolute;
     top:2810.75px;
-    left:200px;
+    width:87%;
     right:0px;
     height:100%;
    
@@ -319,3 +324,44 @@ opacity: 0.3;
         font-size:25px;
         color:rgba(57,62,70,1);
        }
+@media only screen and (max-width:600px){
+    #links{
+        display:flex;
+        flex-direction:row;
+         float:top;
+         
+    }
+    #links:nth-child(1)>a{
+        display:none;
+        visibility:hidden;
+    }
+    #navcontainer{
+        
+         z-index: 3;
+         position: absolute;
+         top:0;
+         background: rgba(34,40,49,1);
+         
+    }
+    #home{
+        position:relative;
+        top:0   ;
+        right:0px;
+        left:0%;
+        width:100%;
+        background: rgb(57,62,70);
+        background: linear-gradient(90deg, rgba(57,62,70,1) 37%, rgba(34,40,49,1) 83%);
+        height:100%;
+        z-index: 2;
+        
+    }
+    nav{
+
+        height: 100%;
+        background: rgba(34,40,49,1);
+        position: absolute;
+        top:0;
+      
+      }
+}
+
